Support Java 8 instead of 17
Keeps the tool usable on old JVMs; the only real casualty is
KeyStore.getInstance(File,...) (Java 9+), replaced by magic-byte
detection of JKS vs PKCS12, which is also extension-agnostic.

Co-Authored-By: glm-5.3-flash <glm-5.3-flash@z.ai>